--- a/openvpn-proxy/src/ovpnproxy.cfg
+++ b/openvpn-proxy/src/ovpnproxy.cfg
@@ -2,7 +2,7 @@
 # file = ovpnproxy.log
 # maxBytes = 102400
 # backupCount = 5
-loglevel = DDEBUG
+loglevel = DEBUG
 #    The logging levels, in decreasing order of importance, are:
 # CRITICAL = 50
 # FATAL = CRITICAL
