Cleaned up Parsing Terminate if OpenVPN protocol is not detected

--- a/openvpn-proxy/src/ovpnproxy.cfg
+++ b/openvpn-proxy/src/ovpnproxy.cfg
@@ -2,7 +2,7 @@
 # file = ovpnproxy.log
 # maxBytes = 102400
 # backupCount = 5
-loglevel = DEBUG
+loglevel = INFO
 #    The logging levels, in decreasing order of importance, are:
 # CRITICAL = 50
 # FATAL = CRITICAL
@@ -35,5 +35,5 @@ ip = 172.19.139.157
 port = 443 
 
 [client3]
-ip = 172.19.139.156
+ip = 172.19.139.158
 port = 443 
